2006-??-?? : ?.?.?
	minor fixes in mod_neko multipart and POST data handling
	fixed $objremove result (was always true)
	fixed one-last-bug when using more-than-five-arguments method call return value
	fixed bug in dev webserver when accessing a directory
	added xcross support
	fixed bug with $setresolver in bytecode interpreter

2006-11-22 : 1.5.2
	fixed std math_pow float
	minor thread cleanup
	added MySQL5.ndll for Windows
	fields hash cache is now global (instead of per-thread)
	socket_select retry on EINTR
	fixed under-second lock timeout for Linux/OSX
	added socket_poll for Linux/OSX (emulate with select() on Windows)
	fixed compilation bug when accessing 'this' in arguments and more than 5 args
	fixed string_split with empty string (was causing infinite loop)
	fixes in more-than-five-arguments-calls
	added $varargs
	
2006-10-29 : 1.5
	neko web server : get_client_header is now case-insensitive
	std : new thread and lock api
	neko : when run from commandline, SEGV on Linux are turned into exceptions
	+ added mod_neko2 error if used with Apache 2.0.x

2006-10-09 : 1.4.5
	sqlite : added BOOL handling
	jit : added mmap support (for execution protection)
	jit : fixed bug when unsupported operation exception
	vm : fixed bug in debug infos reading when nfiles > 255
	vm : fixed bug in interp -> jit call
	vm : default NEKOPATH is now the same on OSX/Linux
	vm : optimized debug infos runtime memory size
	std : added misc.c (float & double bytes manipulations + gc/vm functions)
	std : fixed buf in sys_read_dir on windows (directory not closed correctly)
	std : added sys_getch, sys_get_pid
	std : fixed socket_host (was returning the same as socket_peer)
	std : improved performances of serialize/unserialize
	allowed break & continues in try/catch if they don't break outside
	nekoml : fixed bug in lexer allocating too bug memory when small reads
	nekotools : bugfixes in server, added static file streaming
	nekotools : fixed boot for universal binaries